# twin

./: .gitignore  Cargo.toml  README.md  node.toml
crates/dt-agent/: Cargo.toml
crates/dt-agent/src/: ipc.rs  lib.rs  runtime.rs  sandbox.rs
crates/dt-cli/: Cargo.toml
crates/dt-cli/src/: main.rs
crates/dt-codegen/: Cargo.toml
crates/dt-codegen/src/: lib.rs  migration.rs  python.rs  rust.rs  ts.rs
crates/dt-core/: Cargo.toml
crates/dt-core/src/: cas.rs  crypto.rs  id.rs  lib.rs  types.rs
crates/dt-daemon/: Cargo.toml
crates/dt-daemon/src/: ipc.rs  main.rs  registry.rs  sandbox.rs
crates/dt-db/: Cargo.toml
crates/dt-db/src/: connection.rs  events.rs  knowledge.rs  lib.rs  migrations.rs  schema.rs
crates/dt-embeddings/: Cargo.toml
crates/dt-embeddings/src/: lib.rs  local.rs  remote.rs
crates/dt-event/: Cargo.toml
crates/dt-event/src/: canonical.rs  error.rs  event.rs  lib.rs  metadata.rs  projection.rs  store.rs  telemetry.rs
crates/dt-event/tests/: integration.rs
crates/dt-graph-ui/: Cargo.toml
crates/dt-graph-ui/src/: dashboard.rs  lib.rs  tui.rs
crates/dt-graph-ui/tests/: dashboard_integration.rs
crates/dt-knowledge/: Cargo.toml
crates/dt-knowledge/src/: db.rs  edge.rs  error.rs  export.rs  lean.rs  lib.rs  meta_cognition.rs  node.rs  projection.rs  reasoning.rs  repository.rs  service.rs
crates/dt-knowledge/tests/: integration.rs  meta_cognition_integration.rs
crates/dt-schema/: Cargo.toml
crates/dt-schema/src/: lib.rs  registry.rs  validate.rs
crates/dt-sync/: Cargo.toml
crates/dt-sync/src/: crdt.rs  delta.rs  lib.rs  quic.rs  vector_clock.rs
docs/architecture/: event-sourcing.md  knowledge-graph.md
schemas/: registry.toml
schemas/common/: metadata_envelope.schema.json  sync_peer.schema.json  vector_clock.schema.json
schemas/event/: event.schema.json
schemas/knowledge/: knowledge_node.schema.json
