[package]
name = "dt-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dt-core = { workspace = true }
dt-schema = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
handlebars = "4.5"

[dev-dependencies]
tempfile = "3.9"
