[package]
name = "dt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }

rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
