[package]
name = "dt-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Append-only event sourcing engine for the DT Platform"

[dependencies]
dt-core = { workspace = true }
dt-db = { workspace = true }
dt-sync = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
uuid = { version = "1.7", features = ["v7", "serde"] }
sha3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
tokio = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
