[package]
name = "dt-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Knowledge graph API for the DT Platform — projects from the event log"

[dependencies]
dt-core = { workspace = true }
dt-db = { workspace = true }
dt-event = { workspace = true }
dt-sync = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3.9"

[dev-dependencies]
tempfile = "3.9"
