[package]
name = "dt-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dt-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3.9"
