[package]
name = "dt-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dt-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
quinn = "0.11"
rustls = "0.23"

[dev-dependencies]
tokio = { workspace = true }
